--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "core-js": "^3.15.1",
     "firebase": "^8.7.0",
     "nuxt": "^2.15.7"
+  },
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.39.0",
+    "sass-loader": "^10.2.0"
   }
 }
